--- a/portfolio.html
+++ b/portfolio.html
@@ -27,7 +27,7 @@
                         <a href="./index.html" class="link">Студия</a>
                     </li>
                     <li class="item">
-                        <a href="./portfolio.html" class="link">Портфолио</a>
+                        <a href="./portfolio.html" class="link active">Портфолио</a>
                     </li>
                     <li class="item">
                         <a href="#" class="link">Контакты</a>
@@ -90,7 +90,9 @@
                         <a href="#" class="link-decor">
                             <div class="img-product product">
                             <img src="./images/norlean-vs-gstar.jpg" alt="два баскетболиста с мячем" width="370">
-                            <p class="overlay">                               
+                            <p class="overlay">
+                                Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
+                                шпионажа и атак на защищённые сервера конкурентов.
                             </p>
                             </div>
                             <h3 class="link-portfolio-name">Постер New Orlean vs Golden Star</h3>
@@ -103,6 +105,8 @@
                             <div class="img-product product">
                             <img src="./images/seafood.jpg" alt="логотип рыбного ресторана" width="370">
                             <p class="overlay">
+                                Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
+                                шпионажа и атак на защищённые сервера конкурентов.
                             </p>
                             </div>  
                             <h3 class="link-portfolio-name">Ресторан Seafood</h3>
@@ -115,6 +119,8 @@
                             <div class="img-product product">
                             <img src="./images/prime.jpg" alt="наушники" width="370">
                             <p class="overlay">
+                                Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
+                                шпионажа и атак на защищённые сервера конкурентов.
                             </p>
                             </div>
                             <h3 class="link-portfolio-name">Проект Prime</h3>
@@ -127,6 +133,8 @@
                             <div class="img-product product">
                             <img src="./images/boxes.jpg" alt="две коробочки" width="370">
                             <p class="overlay">
+                                Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
+                                шпионажа и атак на защищённые сервера конкурентов.
                             </p>
                             </div>    
                             <h3 class="link-portfolio-name">Проект Boxes</h3>
@@ -139,6 +147,8 @@
                             <div class="img-product product">
                             <img src="./images/inspiration.jpg" alt="cайт на мониторе" width="370">
                             <p class="overlay">
+                                Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
+                                шпионажа и атак на защищённые сервера конкурентов.
                             </p>
                             </div>
                             <h3 class="link-portfolio-name">Inspiration has no Borders</h3>
@@ -151,6 +161,8 @@
                             <div class="img-product product">
                             <img src="./images/limited-edition.jpg" alt="открытая книга" width="370">
                             <p class="overlay">
+                                Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
+                                шпионажа и атак на защищённые сервера конкурентов.
                             </p>
                             </div>
                             <h3 class="link-portfolio-name">Издание Limited Edition</h3>
@@ -163,6 +175,8 @@
                             <div class="img-product product">
                             <img src="./images/lab.jpg" alt="этикетка на веревочке" width="370">
                             <p class="overlay">
+                                Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
+                                шпионажа и атак на защищённые сервера конкурентов.
                             </p> 
                             </div>
                             <h3 class="link-portfolio-name">Проект LAB</h3>
@@ -175,6 +189,8 @@
                             <div class="img-product product">
                             <img src="./images/growing-business.jpg" alt="человек работает за ноутбуком" width="370">
                              <p class="overlay">
+                                Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
+                                шпионажа и атак на защищённые сервера конкурентов.
                             </p>
                             </div>
                             <h3 class="link-portfolio-name">Growing Business</h3>
