--- a/portfolio.html
+++ b/portfolio.html
@@ -227,7 +227,7 @@
                 <ul class="social-network list">
                     <li class="social-network-icon">
                         <a href="#" class="link item-icon-footer">
-                            <svg class="icon-nw" width="20px" heiht="20px">
+                            <svg class="icon-nw" width="20px" height="20px">
                                 <use href="./images/icons.svg#instagram"></use>
                             </svg>
                         </a>
@@ -235,7 +235,7 @@
                     </li>
                     <li class="social-network-icon">
                         <a href="#" class="link item-icon-footer">
-                            <svg class="icon-nw" width="20px" heiht="20px">
+                            <svg class="icon-nw" width="20px" height="20px">
                                 <use href="./images/icons.svg#twitter"></use>
                             </svg>
                         </a>
@@ -243,7 +243,7 @@
                     </li>
                     <li class="social-network-icon">
                         <a href="#" class="link item-icon-footer">
-                            <svg class="icon-nw" width="20px" heiht="20px">
+                            <svg class="icon-nw" width="20px" height="20px">
                                 <use href="./images/icons.svg#facebook"></use>
                             </svg>
                         </a>
@@ -251,7 +251,7 @@
                     </li>
                     <li class="social-network-icon">
                         <a href="#" class="link item-icon-footer">
-                            <svg class="icon-nw" width="20px" heiht="20px">
+                            <svg class="icon-nw" width="20px" height="20px">
                                 <use href="./images/icons.svg#linkedin"></use>
                             </svg>
                         </a>
